--- a/pom.xml
+++ b/pom.xml
@@ -119,7 +119,6 @@
         <maven-surefire-plugin.version>3.5.0</maven-surefire-plugin.version>
         <mockito.version>5.8.0</mockito.version>
         <ognl.version>3.3.5</ognl.version>
-        <sitemesh.version>2.5.0</sitemesh.version>
         <slf4j.version>2.0.16</slf4j.version>
         <spring.platformVersion>6.0.13</spring.platformVersion>
         <tiles.version>3.0.8</tiles.version>
@@ -407,7 +406,7 @@
                 <artifactId>maven-site-plugin</artifactId>
                 <version>3.20.0</version>
                 <configuration>
-                    <relativizeDecorationLinks>false</relativizeDecorationLinks>
+                    <relativizeSiteLinks>false</relativizeSiteLinks>
                 </configuration>
                 <dependencies>
                     <dependency>
@@ -570,11 +569,6 @@
             </dependency>
             <dependency>
                 <groupId>org.apache.struts</groupId>
-                <artifactId>struts2-sitemesh-plugin</artifactId>
-                <version>${project.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.apache.struts</groupId>
                 <artifactId>struts2-testng-plugin</artifactId>
                 <version>${project.version}</version>
             </dependency>
@@ -641,12 +635,6 @@
                 <groupId>org.apache.felix</groupId>
                 <artifactId>org.apache.felix.shell.tui</artifactId>
                 <version>1.4.1</version>
-            </dependency>
-
-            <dependency>
-                <groupId>opensymphony</groupId>
-                <artifactId>sitemesh</artifactId>
-                <version>${sitemesh.version}</version>
             </dependency>
 
             <!-- Velocity -->
