WW-5209 Upgrade to Jakarta Bean Validation 3.1.0

--- a/apps/showcase/pom.xml
+++ b/apps/showcase/pom.xml
@@ -149,6 +149,12 @@
             <groupId>org.hibernate.validator</groupId>
             <artifactId>hibernate-validator</artifactId>
             <version>${hibernate-validator.version}</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>jakarta.validation</groupId>
+                    <artifactId>jakarta.validation-api</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
 
         <!--
