--- a/jakarta/velocity-tools-view-jakarta/pom.xml
+++ b/jakarta/velocity-tools-view-jakarta/pom.xml
@@ -24,7 +24,7 @@
     <parent>
         <groupId>org.apache.struts</groupId>
         <artifactId>struts2-jakarta</artifactId>
-        <version>7.0.0-M10</version>
+        <version>7.0.0-M11-SNAPSHOT</version>
     </parent>
     <artifactId>struts2-velocity-tools-view-jakarta</artifactId>
     <packaging>jar</packaging>
