--- a/plugins/dwr/pom.xml
+++ b/plugins/dwr/pom.xml
@@ -29,7 +29,7 @@
 
     <artifactId>struts2-dwr-plugin</artifactId>
     <packaging>jar</packaging>
-    <name>Struts 2 DWR Plugin</name>
+    <name>DEPRECATED: Struts 2 DWR Plugin - since 6.7.0</name>
 
     <dependencies>
         <dependency>
