WW-5405 Updates to use the main branch instead of master

--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -18,8 +18,8 @@ name: "CodeQL"
 on:
   push:
     branches:
-      - master
-      - release/struts-7-0-x
+      - 'main'
+      - 'release/*'
   pull_request:
 
 permissions:
