--- a/.github/workflows/scorecards-analysis.yaml
+++ b/.github/workflows/scorecards-analysis.yaml
@@ -21,7 +21,7 @@ on:
     - cron: "30 1 * * 6"    # Weekly on Saturdays
   push:
     branches:
-      - master
+      - "main"
 
 permissions: read-all
 
