--- a/bom/pom.xml
+++ b/bom/pom.xml
@@ -25,11 +25,11 @@
     <parent>
         <groupId>org.apache.struts</groupId>
         <artifactId>struts2-parent</artifactId>
-        <version>7.0.0-M11-SNAPSHOT</version>
+        <version>7.0.0</version>
     </parent>
 
     <artifactId>struts2-bom</artifactId>
-    <version>7.0.0-M11-SNAPSHOT</version>
+    <version>7.0.0</version>
     <packaging>pom</packaging>
 
     <name>Struts 2 Bill of Materials</name>
@@ -44,7 +44,7 @@
     </licenses>
 
     <properties>
-        <struts-version.version>7.0.0-M11-SNAPSHOT</struts-version.version>
+        <struts-version.version>7.0.0</struts-version.version>
         <maven.site.skip>true</maven.site.skip>
         <maven.site.deploy.skip>true</maven.site.deploy.skip>
     </properties>
@@ -160,7 +160,7 @@
     </dependencyManagement>
 
   <scm>
-    <tag>HEAD</tag>
+    <tag>STRUTS_7_0_0</tag>
     <connection>scm:git:https://gitbox.apache.org/repos/asf/struts.git</connection>
     <developerConnection>scm:git:https://gitbox.apache.org/repos/asf/struts.git</developerConnection>
     <url>https://github.com/apache/struts/</url>
