--- a/assembly/pom.xml
+++ b/assembly/pom.xml
@@ -24,7 +24,7 @@
     <parent>
         <groupId>org.apache.struts</groupId>
         <artifactId>struts2-parent</artifactId>
-        <version>6.7.0</version>
+        <version>6.7.1-SNASPHOT</version>
     </parent>
 
     <artifactId>struts2-assembly</artifactId>
