--- a/plugins/portlet-mocks/pom.xml
+++ b/plugins/portlet-mocks/pom.xml
@@ -24,7 +24,7 @@
     <parent>
         <groupId>org.apache.struts</groupId>
         <artifactId>struts2-plugins</artifactId>
-        <version>6.7.0</version>
+        <version>6.7.1-SNASPHOT</version>
     </parent>
 
     <artifactId>struts2-portlet-mocks-plugin</artifactId>
