Adds info about homepage and descritpion to Github repo

--- a/.asf.yaml
+++ b/.asf.yaml
@@ -11,6 +11,8 @@ notifications:
   jira_options: link label worklog
 
 github:
+  description: "Apache Struts is a free, open-source, MVC framework for creating elegant, modern Java web applications"
+  homepage: https://struts.apache.org/
   del_branch_on_merge: true
   protected_branches:
     main:
