--- a/bom/pom.xml
+++ b/bom/pom.xml
@@ -25,11 +25,11 @@
     <parent>
         <groupId>org.apache.struts</groupId>
         <artifactId>struts2-parent</artifactId>
-        <version>6.7.1-SNASPHOT</version>
+        <version>6.7.1-SNAPSHOT</version>
     </parent>
 
     <artifactId>struts2-bom</artifactId>
-    <version>6.7.1-SNASPHOT</version>
+    <version>6.7.1-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <name>Struts 2 Bill of Materials</name>
