--- a/bom/pom.xml
+++ b/bom/pom.xml
@@ -44,7 +44,7 @@
     </licenses>
 
     <properties>
-        <struts-version.version>6.7.0</struts-version.version>
+        <struts-version.version>6.7.1-SNAPSHOT</struts-version.version>
         <maven.site.skip>true</maven.site.skip>
         <maven.site.deploy.skip>true</maven.site.deploy.skip>
     </properties>
