--- a/plugins/convention/pom.xml
+++ b/plugins/convention/pom.xml
@@ -24,7 +24,7 @@
     <parent>
         <groupId>org.apache.struts</groupId>
         <artifactId>struts2-plugins</artifactId>
-        <version>7.0.2-SNAPSHOT</version>
+        <version>7.0.2</version>
     </parent>
 
     <artifactId>struts2-convention-plugin</artifactId>
