--- a/plugins/cdi/pom.xml
+++ b/plugins/cdi/pom.xml
@@ -25,7 +25,7 @@
     <parent>
         <groupId>org.apache.struts</groupId>
         <artifactId>struts2-plugins</artifactId>
-        <version>6.7.2-SNAPSHOT</version>
+        <version>6.7.2</version>
     </parent>
 
     <artifactId>struts2-cdi-plugin</artifactId>
