--- a/plugins/velocity/pom.xml
+++ b/plugins/velocity/pom.xml
@@ -24,7 +24,7 @@
     <parent>
         <groupId>org.apache.struts</groupId>
         <artifactId>struts2-plugins</artifactId>
-        <version>7.0.3-SNAPSHOT</version>
+        <version>7.0.3</version>
     </parent>
 
     <artifactId>struts2-velocity-plugin</artifactId>
