--- a/bundles/demo/pom.xml
+++ b/bundles/demo/pom.xml
@@ -24,7 +24,7 @@
     <parent>
         <groupId>org.apache.struts</groupId>
         <artifactId>struts2-osgi-bundles</artifactId>
-        <version>6.7.3-SNAPSHOT</version>
+        <version>6.7.3</version>
     </parent>
 
     <artifactId>struts2-osgi-demo-bundle</artifactId>
