--- a/pom.xml
+++ b/pom.xml
@@ -184,6 +184,15 @@
             </build>
         </profile>
         <profile>
+            <id>jdk9plus</id>
+            <activation>
+                <jdk>[9,)</jdk>
+            </activation>
+            <properties>
+                <maven.compiler.release>8</maven.compiler.release>
+            </properties>
+        </profile>
+        <profile>
             <id>jdk17</id>
             <activation>
                 <jdk>[17,)</jdk>
