--- a/core/pom.xml
+++ b/core/pom.xml
@@ -25,6 +25,7 @@
         <groupId>org.apache.struts</groupId>
         <artifactId>struts2-parent</artifactId>
         <version>7.0.4-SNAPSHOT</version>
+        <relativePath>../parent/pom.xml</relativePath>
     </parent>
     <artifactId>struts2-core</artifactId>
     <packaging>jar</packaging>
