Uses proper config to avoid failing a build when generating JavaDocs (#1240)
* Uses proper config to avoid failing a build when generating JavaDocs

* Removes unneeded source option

--- a/pom.xml
+++ b/pom.xml
@@ -271,6 +271,15 @@
                     <version>3.3.1</version>
                 </plugin>
                 <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-javadoc-plugin</artifactId>
+                    <version>3.11.2</version>
+                    <configuration>
+                        <doclint>none</doclint>
+                        <failOnError>false</failOnError>
+                    </configuration>
+                </plugin>
+                <plugin>
                     <groupId>org.apache.rat</groupId>
                     <artifactId>apache-rat-plugin</artifactId>
                     <version>0.15</version>
@@ -440,10 +449,6 @@
                         </reports>
                     </reportSet>
                 </reportSets>
-                <configuration>
-                    <doclint>none</doclint>
-                    <failOnError>false</failOnError>
-                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.rat</groupId>
