WW-5326 References OGNL snapshot repository

--- a/pom.xml
+++ b/pom.xml
@@ -209,6 +209,23 @@
                 </plugins>
             </build>
         </profile>
+        <!-- TODO: remove or disable before merging -->
+        <profile>
+            <id>ognl</id>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
+            <repositories>
+                <repository>
+                    <id>oss-snapshots</id>
+                    <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
+                    <layout>default</layout>
+                    <snapshots>
+                        <enabled>true</enabled>
+                    </snapshots>
+                </repository>
+            </repositories>
+        </profile>
     </profiles>
 
     <build>
